Se corrigen los enlaces de los slides, se quitó la ruta de la carpeta html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="slide1__Content">
               <div class="slide1__Content__box">
                 <p class="slide1__Content__box-line1">30 años</p>
-                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="/html/empresa.html">Conózcanos    </a>
+                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos    </a>
               </div>
             </div>
           </div>
@@ -68,7 +68,7 @@
               <div class="slide2__Content__box">
                 <p class="slide2__Content__box-line1">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO</p>
                 <p class="slide2__Content__box-line2">CONVERSIONES <br/>Y<br/> CARBURACIONES</p>
-                <p class="slide2__Content__box-line3">AUTOMATIZACIÓN <br/>DE<br/> CALDERAS</p><a class="slide2__Content__box-line4" href="/html/servicios.html">Servicios</a>
+                <p class="slide2__Content__box-line3">AUTOMATIZACIÓN <br/>DE<br/> CALDERAS</p><a class="slide2__Content__box-line4" href="servicios.html">Servicios</a>
               </div>
             </div>
           </div>
@@ -79,7 +79,7 @@
             </picture>
             <div class="slide3__Content">
               <div class="slide3__Content__box">
-                <p class="slide3__Content__box-line1">SUMINISTRO DE<br/><strong>REFACCIONES <br/> ORIGINALES</strong> </p><a class="slide3__Content__box-line2" href="/html/productos.html">Productos</a>
+                <p class="slide3__Content__box-line1">SUMINISTRO DE<br/><strong>REFACCIONES <br/> ORIGINALES</strong> </p><a class="slide3__Content__box-line2" href="productos.html">Productos</a>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
             </picture>
             <div class="slide4__Content">
               <div class="slide4__Content__box">
-                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="/html/calderas.html">Calderas             </a>
+                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas             </a>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
         </picture>
         <p>¿Necesita asesoría especializada para su empresa?</p>
       </div>
-      <div class="index__contactenos__btn"><a href="/html/contactenos.html">Contáctenos</a></div>
+      <div class="index__contactenos__btn"><a href="contactenos.html">Contáctenos</a></div>
     </div>
     <p class="title">ACERCA DE NOSOTROS</p>
     <div class="index__area">
