Cambios solicitados por Sandra, Archivos 1,2 y 3 pdf

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </picture>
         <p>¿Necesita asesoría especializada para su empresa?</p>
       </div>
-      <div class="index__contactenos__btn"><a href="contactenos.html">Contáctenos</a></div>
+      <div class="index__contactenos__btn"><a href="contacto.html">Contáctenos</a></div>
     </div>
     <p class="title">ACERCA DE NOSOTROS</p>
     <div class="index__area">
@@ -137,21 +137,24 @@
       <div class="index__area__prioridad"> 
         <p class="index__area__prioridad__title">En <strong>SERVICIO TÉCNICO A CALDERAS</strong> nuestra prioridad es usted por lo que le ofrecemos:</p>
         <div class="index__area__prioridad__items">
-          <div class="index__area__prioridad__items-item"><a href="servicios.html"> 
-              <div class="box-img"> <img src="images/SVG/engrane.svg"/></div>
-              <div class="box-txt">
-                <p>SERVICIOS</p>
-              </div></a></div>
-          <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m"><a href="productos.html"> 
-              <div class="box-img"><img src="images/SVG/manometro.svg"/></div>
-              <div class="box-txt">
-                <p>PRODUCTOS</p>
-              </div></a></div>
-          <div class="index__area__prioridad__items-item"><a href="calderas.html"> 
-              <div class="box-img"> <img src="images/SVG/caldera.svg"/></div>
-              <div class="box-txt">
-                <p>CALDERAS</p>
-              </div></a></div>
+          <div class="index__area__prioridad__items-item">
+            <div class="box-img"> <img src="images/SVG/engrane.svg"/></div>
+            <div class="box-txt">
+              <p>SERVICIOS</p><a href="servicios.html">Más información </a>
+            </div>
+          </div>
+          <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m">
+            <div class="box-img"><img src="images/SVG/manometro.svg"/></div>
+            <div class="box-txt">
+              <p>PRODUCTOS</p><a href="productos.html">Más información </a>
+            </div>
+          </div>
+          <div class="index__area__prioridad__items-item">
+            <div class="box-img"> <img src="images/SVG/caldera.svg"/></div>
+            <div class="box-txt">
+              <p>CALDERAS</p><a href="calderas.html">Más información</a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="carousel__marcas">
