--- a/servicios.html
+++ b/servicios.html
@@ -52,6 +52,44 @@
       <div class="servicios__necesidades"> 
         <p>Una de las mayores necesidades de nuestros clientes ha sido siempre el obtener la más alta calidad, garantía y mejor tiempo de respuesta en los servicios; es por ello que en <strong>SERVICIO TÉCNICO A CALDERAS</strong> contamos con un equipo de trabajo altamente calificado y capacitado, con sólidos y amplios conocimientos en diseño, operación, reparación, instalación y mantenimiento de calderas, permitiéndole a nuestros clientes mantenerse operativos de una forma segura y eficiente.</p>
       </div>
+      <div class="servicios__carousel">
+        <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
+          <div class="carousel-indicators"> 
+            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"><img class="d-block w-100 img-fluid" src="images/FotosServicios/0.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"><img class="d-block w-100 img-fluid" src="images/FotosServicios/1.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"><img class="d-block w-100 img-fluid" src="images/FotosServicios/2.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"><img class="d-block w-100 img-fluid" src="images/FotosServicios/3.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"><img class="d-block w-100 img-fluid" src="images/FotosServicios/4.jpg"/></button>
+            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-current="true" aria-label="Slide 6"><img class="d-block w-100 img-fluid" src="images/FotosServicios/5.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"><img class="d-block w-100 img-fluid" src="images/FotosServicios/6.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"><img class="d-block w-100 img-fluid" src="images/FotosServicios/7.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"><img class="d-block w-100 img-fluid" src="images/FotosServicios/8.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"><img class="d-block w-100 img-fluid" src="images/FotosServicios/9.jpg"/></button>
+            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-current="true" aria-label="Slide 11"><img class="d-block w-100 img-fluid" src="images/FotosServicios/10.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"><img class="d-block w-100 img-fluid" src="images/FotosServicios/11.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"><img class="d-block w-100 img-fluid" src="images/FotosServicios/12.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"><img class="d-block w-100 img-fluid" src="images/FotosServicios/13.jpg"/></button>
+          </div>
+          <div class="carousel-inner"> 
+            <div class="carousel-item active"> <img class="d-block w-100" src="images/FotosServicios/0.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/1.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/2.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/3.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/4.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/5.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/6.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/7.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/8.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/9.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/10.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/11.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/12.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/13.jpg"/></div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
+        </div>
+      </div>
       <div class="servicios__periodico">
         <picture>
           <source media="(min-width:768px)" srcset="images/JPG/bannerservicios1920x500-.jpg"/>
