--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,7 @@
     <title>Sertec Calderas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link href="https://fonts.googleapis.com/css2?family=Allura&amp;family=Inter:wght@200;300;400;600&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Allura&amp;family=Inter:wght@200;300;400;600&amp;family=Poppins:wght@800&amp;display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 768px)"/>
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1024px)"/>
@@ -55,7 +55,6 @@
       <div class="servicios__carousel">
         <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
           <div class="carousel-indicators"> 
-            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"><img class="d-block w-100 img-fluid" src="images/FotosServicios/0.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"><img class="d-block w-100 img-fluid" src="images/FotosServicios/1.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"><img class="d-block w-100 img-fluid" src="images/FotosServicios/2.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"><img class="d-block w-100 img-fluid" src="images/FotosServicios/3.jpg"/></button>
@@ -71,8 +70,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"><img class="d-block w-100 img-fluid" src="images/FotosServicios/13.jpg"/></button>
           </div>
           <div class="carousel-inner"> 
-            <div class="carousel-item active"> <img class="d-block w-100" src="images/FotosServicios/0.jpg"/></div>
-            <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/1.jpg"/></div>
+            <div class="carousel-item active"><img class="d-block w-100" src="images/FotosServicios/1.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/2.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/3.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/4.jpg"/></div>
