--- a/servicios.html
+++ b/servicios.html
@@ -55,19 +55,19 @@
       <div class="servicios__carousel">
         <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
           <div class="carousel-indicators"> 
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"><img class="d-block w-100 img-fluid" src="images/FotosServicios/1.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"><img class="d-block w-100 img-fluid" src="images/FotosServicios/2.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"><img class="d-block w-100 img-fluid" src="images/FotosServicios/3.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"><img class="d-block w-100 img-fluid" src="images/FotosServicios/4.jpg"/></button>
-            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-current="true" aria-label="Slide 6"><img class="d-block w-100 img-fluid" src="images/FotosServicios/5.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"><img class="d-block w-100 img-fluid" src="images/FotosServicios/6.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"><img class="d-block w-100 img-fluid" src="images/FotosServicios/7.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"><img class="d-block w-100 img-fluid" src="images/FotosServicios/8.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"><img class="d-block w-100 img-fluid" src="images/FotosServicios/9.jpg"/></button>
-            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-current="true" aria-label="Slide 11"><img class="d-block w-100 img-fluid" src="images/FotosServicios/10.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"><img class="d-block w-100 img-fluid" src="images/FotosServicios/11.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"><img class="d-block w-100 img-fluid" src="images/FotosServicios/12.jpg"/></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"><img class="d-block w-100 img-fluid" src="images/FotosServicios/13.jpg"/></button>
+            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Slide 1"><img class="d-block w-100 img-fluid" src="images/FotosServicios/1.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"><img class="d-block w-100 img-fluid" src="images/FotosServicios/2.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"><img class="d-block w-100 img-fluid" src="images/FotosServicios/3.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"><img class="d-block w-100 img-fluid" src="images/FotosServicios/4.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"><img class="d-block w-100 img-fluid" src="images/FotosServicios/5.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"><img class="d-block w-100 img-fluid" src="images/FotosServicios/6.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"><img class="d-block w-100 img-fluid" src="images/FotosServicios/7.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"><img class="d-block w-100 img-fluid" src="images/FotosServicios/8.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"><img class="d-block w-100 img-fluid" src="images/FotosServicios/9.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"><img class="d-block w-100 img-fluid" src="images/FotosServicios/10.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"><img class="d-block w-100 img-fluid" src="images/FotosServicios/11.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"><img class="d-block w-100 img-fluid" src="images/FotosServicios/12.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"><img class="d-block w-100 img-fluid" src="images/FotosServicios/13.jpg"/></button>
           </div>
           <div class="carousel-inner"> 
             <div class="carousel-item active"><img class="d-block w-100" src="images/FotosServicios/1.jpg"/></div>
