Se quita el icono de flecha derecha en titulo de modal

--- a/servicios.html
+++ b/servicios.html
@@ -104,7 +104,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MAQUINAS</p>
                   </div>
                   <div class="modal-content-body">
@@ -129,7 +129,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" id="hollinModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES</p>
                   </div>
                   <div class="modal-content-body">
@@ -168,7 +168,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true" id="mttoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
@@ -239,7 +239,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true" id="conversionModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
@@ -281,7 +281,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true" id="quemadoresModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES</p>
                   </div>
                   <div class="modal-content-body">
@@ -314,7 +314,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true" id="testoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
                   </div>
                   <div class="modal-content-body">
@@ -339,7 +339,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true" id="cursosModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
@@ -364,7 +364,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true" id="adicionalesModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg"/>
+                  <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">SERVICIOS ADICIONALES</p>
                   </div>
                   <div class="modal-content-body">
