Se crearon los dos slides adicionales y se ordenaron según el archivo 4. también se hicieron cambios en las ventanas modal segun el archivo 5

--- a/marcas.html
+++ b/marcas.html
@@ -3,10 +3,10 @@
 <div class="carousel slide carousel__mobile" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
     <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&-GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/BELL &amp; GOSSET.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.png"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/></div>
@@ -20,8 +20,8 @@
 </div>
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&-GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
+    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL &amp; GOSSET.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
