--- a/index.html
+++ b/index.html
@@ -43,19 +43,23 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/indexDesktop1-1920x1035-.jpg"/>
-              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide1-834X565.jpg"/><img class="d-block w-100" src="images/slidesMobile/slide2-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
+            <div class="slideA__Content"> 
+              <div class="slideA__Content__box"><img class="img-fluid slideA_logo" src="images/SVG/logoSertec.svg"/>
+                <p>DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR</p><img class="img-fluid slideA_logoTermiz" src="images/Marcas/logo_termiz_.png"/><a class="slideA__Content__box-cta" href="contacto.html">Contáctenos </a>
+              </div>
+            </div>
           </div>
-          <div class="carousel-item"> 
+          <div class="carousel-item">
             <picture class="carousel-item__img">
               <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
               <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
-            <div class="slide1__Content">
-              <div class="slide1__Content__box">
-                <p class="slide1__Content__box-line1">30 años</p>
-                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos    </a>
+            <div class="slideB__Content"> 
+              <div class="slideB__Content__box">
+                <p>SOMOS ESPECIALISTAS EN CALDERAS</p><img class="img-fluid slideA_logoCleaver" src="images/Marcas/logo_termiz_.png"/>
               </div>
             </div>
           </div>
@@ -90,7 +94,19 @@
             </picture>
             <div class="slide4__Content">
               <div class="slide4__Content__box">
-                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas             </a>
+                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas </a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item"> 
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide1__Content">
+              <div class="slide1__Content__box">
+                <p class="slide1__Content__box-line1">30 años</p>
+                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos    </a>
               </div>
             </div>
           </div>
@@ -163,10 +179,10 @@
 <div class="carousel slide carousel__mobile" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
     <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&-GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/BELL &amp; GOSSET.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.png"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/></div>
@@ -180,8 +196,8 @@
 </div>
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&-GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
+    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL &amp; GOSSET.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
