--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide1Desktop-1920x537.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide2-480x565.jpg"/>
             </picture>
             <div class="slideA__Content"> 
               <div class="slideA__Content__box"><img class="img-fluid slideA_logo" src="images/SVG/logoSertec.svg"/>
-                <p>DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR</p><img class="img-fluid slideA_logoTermiz" src="images/Marcas/logo_termiz_.png"/><a class="slideA__Content__box-cta" href="contacto.html">Contáctenos </a>
+                <p>DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR</p><img class="img-fluid slideA_logoTermiz" src="images/Marcas/logo_termiz_.png"/>
               </div>
             </div>
           </div>
@@ -59,7 +59,7 @@
             </picture>
             <div class="slideB__Content"> 
               <div class="slideB__Content__box">
-                <p>SOMOS ESPECIALISTAS EN CALDERAS</p><img class="img-fluid slideA_logoCleaver" src="images/Marcas/logo_termiz_.png"/>
+                <p>SOMOS <strong>ESPECIALISTAS EN CALDERAS</strong></p><img class="img-fluid slideB_logoCleaver" src="images/Marcas/Cleaver.png"/><a class="slideB__Content__box-cta" href="contacto.html">Contáctenos </a>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <div class="slide1__Content">
               <div class="slide1__Content__box">
                 <p class="slide1__Content__box-line1">30 años</p>
-                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos    </a>
+                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos     </a>
               </div>
             </div>
           </div>
@@ -122,7 +122,6 @@
         </picture>
         <p>¿Necesita asesoría especializada para su empresa?</p>
       </div>
-      <div class="index__contactenos__btn"><a href="contacto.html">Contáctenos</a></div>
     </div>
     <p class="title">ACERCA DE NOSOTROS</p>
     <div class="index__area">
