Se corrige error de visualización de logotipo cleaver en sección calderas

--- a/calderas.html
+++ b/calderas.html
@@ -50,7 +50,7 @@
       </div>
       <p class="title">VENTA DE CALDERAS</p>
       <div class="calderas__venta"> 
-        <p>Venta de calderas industriales de la marca:</p><img src="images/Marcas/CLEAVERBROOKS.png" alt="Logo de CleaverBrooks"/>
+        <p>Venta de calderas industriales de la marca:</p><img src="images/Marcas/Cleaver.png" alt="Logo de CleaverBrooks"/>
       </div>
       <div class="calderas__carousel">
         <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
