Se desplazan los elementos del segundo slide hacia abajo según lo solicitado y se hace mayor el with del elemento Necesitas asesoria?

--- a/servicios.html
+++ b/servicios.html
@@ -106,6 +106,7 @@
                 <div class="modal-content">
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MAQUINAS</p>
+                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
