--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
   <div class="carousel-inner">
     <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&amp;-GOSSET.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
@@ -186,7 +185,7 @@
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING PUMP.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING-PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
@@ -196,7 +195,7 @@
     <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&amp;-GOSSET.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING PUMP.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING-PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
