Se quitan los subtitulos grises de los modales

--- a/servicios.html
+++ b/servicios.html
@@ -97,12 +97,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MAQUINAS</p>
-                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <p class="modal-title" id="exampleModalLabel">CUARTO DE MAQUINAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>CUARTO DE MAQUINAS</p>
                       <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/DisenoCuartodeMaquinas.jpg" alt=""/></div>
                     </div>
                     <div class="modal-content-body-content">
@@ -123,11 +121,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES</p>
+                    <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE COLECTOR DE HOLLÍN</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>INSTALACIÓN DE COLECTOR DE HOLLÍN</p>
                       <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/hollin.jpg" alt="Hollin"/><img class="img-fluid" src="images/Single/instalacionCalderasEquiposAux.jpg" alt="Hollin"/></div>
                     </div>
                     <div class="modal-content-body-content">
@@ -162,11 +159,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>MANTENIMIENTO PREVENTIVO</p>
                       <div class="modal-content-body-sidebar__images">
                         <h3>ANTES</h3><img class="img-fluid" src="images/Single/mantenimientoPrevCorr1.jpg"/>
                         <h3>DESPUÉS </h3><img class="img-fluid" src="images/Single/mantenimientoPrevCorr2.jpg"/>
@@ -233,11 +229,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL</p>
                       <div class="modal-content-body-sidebar__images">
                         <h3>ANTES</h3><img class="img-fluid" src="images/Single/conversionCombustibles1.jpg" alt="Caldera"/>
                         <h3>DESPUÉS</h3><img class="img-fluid" src="images/Single/conversionCombustibles2.jpg" alt="Caldera"/>
@@ -275,11 +270,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES</p>
+                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>MANTENIMIENTO PREVENTIVO</p>
                       <div class="modal-content-body-sidebar__images">
                         <h3>ANTES</h3><img class="img-fluid" src="images/Single/quemadores1.jpg" alt=""/>
                         <h3>DESPUÉS</h3><img class="img-fluid" src="images/Single/quemadores2.jpg" alt=""/>
@@ -308,11 +302,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
+                    <p class="modal-title" id="exampleModalLabel">CARBURACIÓN</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>CARBURACIÓN</p>
                       <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/testo1.jpg"/><img class="img-fluid" src="images/Single/testo2.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
@@ -333,11 +326,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">CURSO DE CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>CURSO DE CALDERAS</p>
                       <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/curso.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
@@ -358,11 +350,10 @@
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">SERVICIOS ADICIONALES</p>
+                    <p class="modal-title" id="exampleModalLabel">EMERGENCIAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <p>EMERGENCIAS</p>
                       <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/emergencias.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
