Se creó el botón superior para cerrar los modales

--- a/servicios.html
+++ b/servicios.html
@@ -96,6 +96,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CUARTO DE MAQUINAS</p>
                   </div>
@@ -120,6 +121,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" id="hollinModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE COLECTOR DE HOLLÍN</p>
                   </div>
@@ -158,6 +160,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true" id="mttoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO</p>
                   </div>
@@ -228,6 +231,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true" id="conversionModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL</p>
                   </div>
@@ -269,6 +273,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true" id="quemadoresModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO</p>
                   </div>
@@ -301,6 +306,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true" id="testoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CARBURACIÓN</p>
                   </div>
@@ -325,6 +331,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true" id="cursosModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">CURSO DE CALDERAS</p>
                   </div>
@@ -349,6 +356,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true" id="adicionalesModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
+                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">EMERGENCIAS</p>
                   </div>
