--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
           <div class="footer__box__body-logo"><img src="images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
           <div class="footer__box__body-links">
             <ul> 
-              <li><a href="/">INICIO</a></li>
-              <li><a href="/html/empresa.html">¿QUIÉNES SOMOS? </a></li>
-              <li><a href="/html/servicios.html">SERVICIOS</a></li>
-              <li><a href="/html/productos.html">PRODUCTOS</a></li>
-              <li><a href="/html/calderas.html">CALDERAS</a></li>
-              <li><a href="/html/contacto.html">CONTACTO</a></li>
-              <li><a href="/html/privacidad.html">POLÍTICA DE PRIVACIDAD </a></li>
+              <li><a href="index.html">INICIO</a></li>
+              <li><a href="empresa.html">¿QUIÉNES SOMOS? </a></li>
+              <li><a href="servicios.html">SERVICIOS</a></li>
+              <li><a href="productos.html">PRODUCTOS</a></li>
+              <li><a href="calderas.html">CALDERAS</a></li>
+              <li><a href="contacto.html">CONTACTO</a></li>
+              <li><a href="privacidad.html">POLÍTICA DE PRIVACIDAD </a></li>
             </ul>
           </div>
           <div class="footer__box__body-address"> 
