--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1024px)"/>
     <link rel="stylesheet" href="css/menu.css"/>
     <link rel="stylesheet" href="css/form.css"/>
+    <link rel="shortcut icon" href="images/favicon.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"> </script>
@@ -94,7 +95,7 @@
             </picture>
             <div class="slide4__Content">
               <div class="slide4__Content__box">
-                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas </a>
+                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas</a>
               </div>
             </div>
           </div>
