Se cambian las palabras de productos de plural a singular

--- a/productos.html
+++ b/productos.html
@@ -239,7 +239,7 @@
                 <div class="accordion-body__box">
                   <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="images/Products/Electrodos.jpg"/></div>
                   <div class="accordion-body__box-txt">
-                    <p>Electrodos</p>
+                    <p>Electrodo</p>
                   </div>
                 </div>
                 <div class="accordion-body__box">
@@ -266,13 +266,13 @@
                 <div class="accordion-body__box">
                   <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="images/Products/Manometro.jpg"/></div>
                   <div class="accordion-body__box-txt">
-                    <p>Manómetros</p>
+                    <p>Manómetro</p>
                   </div>
                 </div>
                 <div class="accordion-body__box">
                   <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="images/Products/termometroRochester600x600.jpg"/></div>
                   <div class="accordion-body__box-txt">
-                    <p>Termómetros  </p>
+                    <p>Termómetro  </p>
                   </div>
                 </div>
               </div>
