Se cambian los títulos de los modales por los textos que están en los botones de los enlaces de servisios, tambien se mueve el boton de cerrar de los modales, se aleja del título

--- a/servicios.html
+++ b/servicios.html
@@ -102,7 +102,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CUARTO DE MAQUINAS</p>
+                    <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MÁQUINAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -127,7 +127,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE COLECTOR DE HOLLÍN</p>
+                    <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -166,7 +166,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO</p>
+                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -237,7 +237,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL</p>
+                    <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -279,7 +279,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO</p>
+                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -312,7 +312,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CARBURACIÓN</p>
+                    <p class="modal-title" id="exampleModalLabel">CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -337,7 +337,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CURSO DE CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -362,7 +362,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="/images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">EMERGENCIAS</p>
+                    <p class="modal-title" id="exampleModalLabel">SERVICIOS ADICIONALES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
