Se corrige el formulario, se cambia de cuenta

--- a/contacto.html
+++ b/contacto.html
@@ -150,5 +150,6 @@
     </footer>
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
+    <script src="js/limpiar.js"></script>
   </body>
 </html>
