No se generan cambios

--- a/servicios.html
+++ b/servicios.html
@@ -101,7 +101,7 @@
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
+                  <div class="modal-content-close"> <a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
                     <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MÁQUINAS</p>
                   </div>
@@ -467,5 +467,6 @@
     </footer>
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
+    <script src="js/limpiar.js"></script>
   </body>
 </html>
