Se hacen las correcciones necesarias para el ajuste a tablet

--- a/contacto.html
+++ b/contacto.html
@@ -73,8 +73,8 @@
       </div>
       <div class="contacto__convencer">
         <picture>
-          <source media="(min-width:1110px)" srcset="images/JPG/bannerContacto1920x600.jpg"/>
-          <source media="(min-width:768px)" srcset="images/JPG/bannerContacto834x537.jpg"/><img class="img-fluid" src="images/PNG/fondoContactenos2.png" alt="Ingeniero con casco"/>
+          <source media="(min-width:1110px)" srcset="/images/PNG/fondoContactenos-left-Desk.png"/>
+          <source media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png"/><img class="img-fluid" src="images/PNG/fondoContactenos2.png" alt="Ingeniero con casco"/>
         </picture>
         <p>Contáctenos y déjese convencer por nuestra amplia experiencia.</p>
       </div>
