--- a/marcas.html
+++ b/marcas.html
@@ -2,29 +2,30 @@
 <p class="title">MARCAS</p>
 <div class="carousel slide carousel__mobile" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING-PUMP.jpg"/></div>
+    <div class="carousel-item active"><img class="d-block w-100" src="images/Marcas/ALLANSON.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/ASCO.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/CLEAVERBROOKS.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/ECOFLAM.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/GRUNDFOS.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/HONEYWELL.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/METRON.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/PICSA.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/SENTINEL.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/VAYREMEX.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/VIKING-PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
 </div>
-<div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls">
+<div class="carousel slide carousel__tablet carousel-fade" data-bs-ride="carusel" id="carouselExampleControls1">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL-&amp;-GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING-PUMP.jpg"/></div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
+    <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/1.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/2.jpg"/></div>
+    <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/3.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/4.jpg"/></div>
+    <div class="carousel-item">       <img class="d-block w-100" src="images/carousel/5.jpg"/></div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
 </div>
 <div class="marcas__propiedad"> 
