Se aplican los saltos de linea solicitados por Sandra en la sección de servivios

--- a/servicios.html
+++ b/servicios.html
@@ -96,7 +96,7 @@
       <div class="servicios__catalogo"> 
         <div class="servicios__catalogo__items"> 
           <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
-            <p>DISEÑO DE CUARTO DE MÁQUINAS</p>
+            <p>DISEÑO DE CUARTO <br>DE MÁQUINAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
@@ -231,7 +231,7 @@
             </div>
           </div>
           <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
-            <p>CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
+            <p>CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#conversionModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true" id="conversionModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
@@ -331,7 +331,7 @@
             </div>
           </div>
           <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
-            <p>CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
+            <p>CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#cursosModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true" id="cursosModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
