--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
 </div>
-<div class="carousel slide carousel__tablet carousel-fade" data-bs-ride="carusel" id="carouselExampleControls1">
+<div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls1">
   <div class="carousel-inner">
     <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/1.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100" src="images/carousel/2.jpg"/></div>
